--- a/src/styles/Person.css
+++ b/src/styles/Person.css
@@ -91,17 +91,19 @@
 
   /* Box size scaling */
   .container .box {
-    width: 12rem;
-    height: 12rem;
+    width: 10rem;
+    height: 10rem;
     margin: 2rem;
   }
 
   /* Text scaling */
   .person-content h2 {
     font-size: 1.5rem;
+    margin: 0;
   }
 
   .person-content span {
     font-size: 1.2rem;
+    margin: 0;
   }
 }
