--- a/src/styles/Campus.css
+++ b/src/styles/Campus.css
@@ -148,8 +148,8 @@ body {
   margin-top: 20px;
   width: 120px;
   height: 40px;
-  background-color: white; /* Changed from blueviolet to white */
-  color: black; /* Changed text color to black */
+  background-color: white; /* Default background color */
+  color: black; /* Default text color */
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -167,6 +167,7 @@ body {
   background-color: black; /* Background color changes to black on hover */
   color: white; /* Text color changes to white on hover */
 }
+
 
 .Campus-space {
   width: 100%;
