--- a/src/styles/Faq.css
+++ b/src/styles/Faq.css
@@ -1,7 +1,7 @@
 /* FAQ Section */
 .faq {
   padding: 5%;
-  height: 70vh;
+  height: 80vh;
   text-align: center;
   background-color: black;
   background: url("/assets/pexels-apasaric-1694000.jpg");
@@ -56,7 +56,7 @@
 }
 
 .answer {
-  background-color: rgb(149, 149, 149);
+  background-color: black;
   color: #e2e2e2;
   font-size: 1.2rem;
   font-weight: 700;
