--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -69,7 +69,7 @@
 .nav-right a {
   text-decoration: none;
   color: #e2e2e2;
-  margin: 0 0.5rem 0.5rem 1rem;
+  margin: 0 .5rem 0.5rem 1rem;
   padding: 5px;
   font-size: 1.05rem;
   font-weight: 700;
