--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -55,6 +55,7 @@
   margin: 1rem;
   font-size: 2.5rem;
   line-height: 4rem;
+  height: 15vh;
 }
 
 .hero-left h1 span {
@@ -94,8 +95,6 @@ canvas {
   cursor: pointer;
   transition: 0.3s, color 0.3s;
   box-sizing: border-box;
-
-
 }
 
 .hero-cta-btn:hover {
